# DrtoolboxCRM

./: .PUSH_READY.md  .continue-here.md  .env.development  .env.example  .env.production  .env.production.example  .gitignore  Crmimprove0427.md  DEPLOYMENT.md  README.md  TODO-NEXT.md  check-status.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
.planning/: .continue-here.md  DEPLOYMENT-READY.md  HANDOFF.json  NEXT_STEPS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  V1.0-COMPLETION.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/graphs/: .last-build-snapshot.json  GRAPH_REPORT.md  graph.json
backend/: .dockerignore  .env.example  Dockerfile  PHASE2_COMPLETION_REPORT.md  PHASE2_QUICK_START.md  database.sqlite  package-lock.json  package.json
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/scripts/: seed-data.ts
backend/src/: app.controller.ts  app.module.ts  main.ts
doc/: REVIEW.md
docs/: API.md  ARCHITECTURE.md  CRMplan.md  Gemini3.1Plan.md  INTEGRATION_GUIDE.md  PATIENT_IDENTIFICATION.md  README.md  TESTING.md  improveplan.md  progress.md  pyproject.toml
docs/api/: integration-api.md
docs/plans/: 2026-02-10-treatments-implementation.md  2026-02-10-treatments-ppf-design.md  2026-02-12-frontend-features-implementation.md  2026-02-12-treatment-course-design.md  2026-02-12-treatment-course-plan.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/playwright-report/: index.html
graphify-out/: graph.html
(+535 files in other folders)
